Fixed wordwrap in tables.

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -991,7 +991,7 @@ Usage (In Ghost editor):
     border-collapse: collapse;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     font-size: 1.6rem;
-    white-space: nowrap;
+/*     white-space: nowrap; */
     vertical-align: top;
 }
 
